# GetYourGuide-Itinary-Creater

./: .env.example  README.md  Switzerland Itinerary 1.md  Switzerland Itinerary 2.md  pyproject.toml  search_results_2025-02-04_21-34-27.txt
db/: chroma.sqlite3
knowledge/: user_preference.txt
src/seeking_travel_planner_for_getyourguide_itinerary_creation/: crew.py  main.py
src/seeking_travel_planner_for_getyourguide_itinerary_creation/config/: agents.yaml  tasks.yaml
